# x4-companion

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat
docs/: manual-test.md  minimax-api-shape.md
docs/superpowers/plans/: 2026-05-08-x4-companion-implementation.md
docs/superpowers/specs/: 2026-05-08-x4-companion-design.md
scripts/: brain_e2e_probe.py  gen_icon.py  minimax_smoke.py  minimax_vlm_probe.py  minimax_vlm_stream_probe.py  overlay_smoke.py  tray_smoke.py
src/x4_companion/: __main__.py  app.py  audio.py  brain.py  capture.py  config.py  hotkey.py  minimax_brain.py  openai_brain.py  overlay.py  stt.py  tray.py  tts.py  x4_actions.py  x4_inputmap.py
src/x4_companion/data/: vkb_bindings.md  x4_keyboard_defaults.md
tests/: test_audio.py  test_brain.py  test_capture.py  test_config.py  test_hotkey.py  test_minimax_brain.py  test_openai_brain.py  test_smoke.py  test_stt.py  test_tts.py  test_x4_actions.py  test_x4_inputmap.py
