[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x4-companion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "deepgram-sdk>=3.7",
    "openai>=2.0",
    "httpx>=0.27",
    "numpy>=2.0",
    "Pillow>=10.0",
    "dxcam>=0.0.5; platform_system=='Windows'",
    "opencv-python>=4.9; platform_system=='Windows'",
    "keyboard>=0.13.5; platform_system=='Windows'",
    "pygetwindow>=0.0.9; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.scripts]
x4-companion = "x4_companion.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/x4_companion"]

[tool.hatch.build.targets.wheel.force-include]
"src/x4_companion/data" = "x4_companion/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
